Move Apple code to subdirectory
Signed-off-by: Darshan Sen <raisinten@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,8 @@ list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 # C++ standard
 set(CMAKE_CXX_STANDARD 20)
 
-add_library(req STATIC src/http.mm)
-
-target_include_directories(req PUBLIC include)
-
 if(APPLE)
-  target_link_libraries(req PUBLIC "-framework Foundation")
+  add_subdirectory(src/apple)
 endif()
 
 find_package(GoogleTest REQUIRED)
