--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ elseif(WIN32)
   add_subdirectory(src/win32)
 endif()
 
+add_subdirectory(examples)
+
 find_package(GoogleTest REQUIRED)
 enable_testing()
 add_subdirectory(test)
