Add initial Linux implementation
Signed-off-by: Darshan Sen <raisinten@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,9 @@ if(APPLE)
   add_subdirectory(src/apple)
 elseif(WIN32)
   add_subdirectory(src/win32)
+elseif(UNIX)
+  find_package(LibSoup REQUIRED)
+  add_subdirectory(src/linux)
 endif()
 
 add_subdirectory(examples)
