--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_executable(req_http_unit http.cc)
+add_executable(benoni_http_unit http.cc)
 
-target_link_libraries(req_http_unit PRIVATE req)
-target_link_libraries(req_http_unit PRIVATE GTest::gtest GTest::gtest_main)
+target_link_libraries(benoni_http_unit PRIVATE benoni)
+target_link_libraries(benoni_http_unit PRIVATE GTest::gtest GTest::gtest_main)
 
-gtest_discover_tests(req_http_unit)
+gtest_discover_tests(benoni_http_unit)
