--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.24)
-project(req VERSION 0.0.1 LANGUAGES CXX DESCRIPTION "Networking library")
+project(benoni VERSION 0.0.1 LANGUAGES CXX DESCRIPTION "Networking library")
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 
 # C++ standard
