Do not build tests and examples by default
Signed-off-by: Darshan Sen <raisinten@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 # C++ standard
 set(CMAKE_CXX_STANDARD 20)
 
+option(BENONI_TESTS "Build the Benoni tests" OFF)
+option(BENONI_EXAMPLES "Build the Benoni examples" OFF)
+
 if(APPLE)
   add_subdirectory(src/apple)
 elseif(WIN32)
@@ -14,7 +17,11 @@ elseif(UNIX)
   add_subdirectory(src/linux)
 endif()
 
-add_subdirectory(examples)
+if(BENONI_EXAMPLES)
+  add_subdirectory(examples)
+endif()
 
-enable_testing()
-add_subdirectory(test)
+if(BENONI_TESTS)
+  enable_testing()
+  add_subdirectory(test)
+endif()
