Build tests and examples on CI
Signed-off-by: Darshan Sen <raisinten@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,8 @@ jobs:
       run: >
         cmake -B ${{ steps.strings.outputs.build-output-dir }}
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+        -DBENONI_TESTS:BOOL=ON
+        -DBENONI_EXAMPLES:BOOL=ON
         -S ${{ github.workspace }}
 
     - name: Build
