--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,5 +23,9 @@ endif()
 
 if(BENONI_TESTS)
   enable_testing()
-  add_subdirectory(test)
+  add_subdirectory(test/unit)
+
+  if(PROJECT_IS_TOP_LEVEL)
+    add_subdirectory(test/packaging)
+  endif()
 endif()
