--- a/src/apple/CMakeLists.txt
+++ b/src/apple/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_library(benoni STATIC http.mm)
 
+target_compile_options(benoni PUBLIC "-fobjc-arc")
+
 target_include_directories(benoni PUBLIC "${PROJECT_SOURCE_DIR}/include")
 
 target_link_libraries(benoni PUBLIC "-framework Foundation")
