--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,17 @@ jobs:
 
     - name: Build
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-      run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
+      run: >
+        cmake --build ${{ steps.strings.outputs.build-output-dir }}
+        --config ${{ matrix.build_type }}
+
+    - name: Install
+      run: >
+        cmake --install ${{ steps.strings.outputs.build-output-dir }}
+        --prefix ${{ steps.strings.outputs.build-output-dir }}/dist
+        --config ${{ matrix.build_type }}
+        --component benoni
+        --verbose
 
     - name: Test
       working-directory: ${{ steps.strings.outputs.build-output-dir }}
