--- a/src/apple/CMakeLists.txt
+++ b/src/apple/CMakeLists.txt
@@ -1,9 +1,9 @@
-add_library(benoni STATIC http.mm)
+add_library(${BENONI_TARGET} STATIC http.mm)
 
-target_compile_options(benoni PUBLIC "-fobjc-arc")
+target_compile_options(${BENONI_TARGET} PUBLIC "-fobjc-arc")
 
-target_include_directories(benoni PUBLIC
+target_include_directories(${BENONI_TARGET} PUBLIC
   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/include>)
 
-target_link_libraries(benoni PUBLIC "-framework Foundation")
+target_link_libraries(${BENONI_TARGET} PUBLIC "-framework Foundation")
