--- a/test/packaging/project/CMakeLists.txt
+++ b/test/packaging/project/CMakeLists.txt
@@ -8,4 +8,8 @@ add_subdirectory(
   "${CMAKE_CURRENT_BINARY_DIR}/benoni_build")
 
 add_executable(project project.cc)
-target_link_libraries(project PRIVATE benoni)
+
+string(TOLOWER ${CMAKE_SYSTEM_NAME} LOWER_SYSTEM_NAME)
+set(BENONI_TARGET benoni_${LOWER_SYSTEM_NAME})
+
+target_link_libraries(project PRIVATE ${BENONI_TARGET})
