--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(http_example http_example.cc)
 
-target_link_libraries(http_example PRIVATE benoni)
+target_link_libraries(http_example PRIVATE ${BENONI_TARGET})
