--- a/src/linux/CMakeLists.txt
+++ b/src/linux/CMakeLists.txt
@@ -1,7 +1,7 @@
-add_library(benoni STATIC http.cc)
+add_library(${BENONI_TARGET} STATIC http.cc)
 
-target_include_directories(benoni PUBLIC
+target_include_directories(${BENONI_TARGET} PUBLIC
   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/include>)
 
-target_link_libraries(benoni PUBLIC libsoup)
+target_link_libraries(${BENONI_TARGET} PUBLIC libsoup)
